老板娘说加一个背景，其他都没有问题

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>再别康桥</title>
 </head>
+<link rel="stylesheet" href="01.css">
 
 <body>
-    <h2>再别康桥</h2>
-    <p>轻轻的我走了，挥一挥衣袖不带走一片云彩</p>
+    <div>
+        <h2>再别康桥</h2>
+        <p>轻轻的我走了，挥一挥衣袖不带走一片云彩</p>
+    </div>
 </body>
 
 </html>
