--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>再别康桥</title>
 </head>
+<link rel="stylesheet" href="m2.css">
 
 <body>
     <h2>再别康桥</h2>
     <p>轻轻的我走了，挥一挥衣袖不带走一片云彩</p>
     <p>但我不能放歌，悄悄是别离的笙箫；夏虫也为我沉默，沉默是今晚的康桥！</p>
     <div>
-        <h2>北大诗人</h2>
+        <p>悄悄的我走了，正如我悄悄的来；我挥一挥衣袖，不带走一片云彩</p>
+    </div>
 
     </div>
 </body>
